--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ h3{
     font-family: 'Press Start 2P', cursive;
     border-radius: 20px;
     box-shadow: 0 0 20px rgba(180, 23, 23, 0.616);
+    color: orange;
     padding-left: 25px;
     padding-right: 25px;
     padding-top: 10px;
@@ -40,4 +41,59 @@ h3{
     top: 0px;
     left: 70px;
     transition: 0.3s;
+    filter: drop-shadow(0 0 50px gold);
+}
+ul{
+    background-color: white;
+    color: white;
+    position: absolute;
+    left: 50%;
+    /* Чтобы менять порядок тегов. Перенесли список на передний план. */
+    z-index: 10;
+    transform: translateX(-50%);
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.3s;
+    border-radius: 15px;
+    padding: 0px 10px;
+    background: rgb(237,3,3);
+background: linear-gradient(183deg, rgba(237,3,3,1) 0%, rgba(0,176,255,1) 100%);
+    font-family: 'Press Start 2P', cursive;
+    list-style-type: none;
+}
+#hints:hover ul{
+    opacity: 1;
+}
+#Clad{
+    position: absolute;
+    pointer-events: none;
+    width: 50px;
+    top: 200px;
+    right: 215px;
+    opacity: 0;
+    transition: 1s;
+    top: calc(50% - 25px);
+    right: calc(50% - 25px);
+}
+li{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+a{
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    background: linear-gradient(90deg, rgba(202,228,75,1) 0%, rgba(255,0,0,1) 100%);
+    text-decoration: none;
+    padding: 10px 20px;
+    display: inline-block;
+    border-radius: 10px;
+    background-size: 200% 100%;
+    transition: 1s;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.442);
+}
+a:hover{
+    background-position: right;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.442);
+    margin-top: 20px;
 }
